# aggregator

./: .env  Cargo.toml  Makefile  README.md
apps/aggregator/: Cargo.toml  Dockerfile
apps/aggregator/src/: aggregator.rs  main.rs
apps/iot_producer/: Cargo.toml  Dockerfile
apps/iot_producer/src/: fleet.rs  main.rs
apps/producer/: Cargo.toml
apps/producer/src/: main.rs
apps/shared_models/: Cargo.toml
apps/shared_models/src/: lib.rs  postgresql.rs  rabbitmq.rs  redis_client.rs
apps/terminal_ui/: Cargo.toml  LICENSE  README.md
apps/terminal_ui/src/: app.rs  events.rs  main.rs  tui.rs  ui.rs  update.rs
infra/aggregator/: deployment.yaml
infra/base/: postgresql-configmap.yaml  postgresql.yaml  rabbitmq.yaml  redis-commander.yaml  redis.yaml
infra/observability/: docker-compose.yaml  prometheus.yml
infra/producer/: deployment.yaml
sql/: schema.sql
