[package]
name = "iot_producer"
version = "0.1.0"
edition = "2024"

[dependencies]
shared_models = { path = "../shared_models" }

lapin = "4.10"
tokio = { version = "1.38", features = ["full"] }
futures-util = "0.3"

rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
