[package]
name = "shared_models"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3"
lapin = "4.10"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.25", features = ["tokio-comp", "aio"] }

log = "0.4"
env_logger = "0.11"
